--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "create-react-app": "^5.0.1"
   }
 }
