--- a/Authentication/package.json
+++ b/Authentication/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
-    "create-react-app": "^5.0.1"
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.1",
+    "speakeasy": "^2.0.0"
   }
 }
