--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mysql2": "^3.9.1",
     "speakeasy": "^2.0.0"
   }
 }
