--- a/passwd_store_and_encr/package.json
+++ b/passwd_store_and_encr/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "passwd_store_and_encr",
+  "name": "paswd_store_and_encr",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/main.js"
   },
-  "author": "",
+  "author": "Judah Parker",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.1.0"
   }
 }
