--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.11",
     "speakeasy": "^2.0.0"
   }
 }
