--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.0.0",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.11",
     "speakeasy": "^2.0.0"
