--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "mysql2": "^3.9.1",
     "nodemailer": "^6.9.11",
     "speakeasy": "^2.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
