--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.8",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "cross-fetch": "^4.0.0",
